--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,15 @@
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.10.0",
     "gsap": "^3.13.0",
+    "lucide-react": "^0.525.0",
     "prettyavatars": "^0.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-force-graph": "^1.48.0",
+    "react-force-graph-2d": "^1.28.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.6.3"
+    "react-router-dom": "^7.6.3",
+    "three": "^0.178.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
